--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.14.0",
+    "@mikegsrv/react-awesome-button": "^6.6.0",
     "@mitchellhamilton/react-select-1": "^3.1.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "classnames": "^2.3.1",
+    "rc-input-number": "^7.1.0",
+    "rc-util": "^5.12.2",
     "react": "^17.0.2",
+    "react-addons-pure-render-mixin": "^15.6.3",
+    "react-awesome-button": "^6.5.1",
+    "react-buttons": "0.0.11",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
