--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-awesome-button": "^6.5.1",
     "react-buttons": "0.0.11",
     "react-dom": "^17.0.2",
+    "react-github-btn": "^1.2.0",
     "react-scripts": "4.0.3",
+    "react-social-icons": "^5.3.0",
+    "react-social-media-buttons": "^1.0.8",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
