--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-addons-pure-render-mixin": "^15.6.3",
     "react-awesome-button": "^6.5.1",
     "react-buttons": "0.0.11",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-github-btn": "^1.2.0",
     "react-scripts": "4.0.3",
